# c2bsh

./: CMakeLists.txt  build.gradle.kts  compile_run.sh  proguard-rules.pro  settings.gradle.kts
.github/workflows/: android.yml
gradle/: libs.versions.toml
native/: CMakeLists.txt  compile_run.sh
native/include/: cb_bool.h  cb_converter.h  cb_file_util.h  cb_formatter.h  cb_log.h  cb_string.h
native/include/android/: android_log.h  android_main.h
native/src/: cb_converter.c  cb_file_util.c  cb_formatter.c  cb_log.c  cb_main.c  cb_string.c
native/src/android/: android_main.c
src/main/c/: c2bsh_main.c  config.h.in  log.c  log.h
src/main/c/android/: android_main.c  android_main.h
src/main/c/converter/: converter.c  converter.h
src/main/c/file/: file_util.c  file_util.h
src/main/c/format/: formatter.c  formatter.h
src/main/c/string/: str_util.c  str_util.h
src/main/java/dev/trindadedev/c2bsh/: C2BSH.kt  C2BSHExt.kt  C2BSHResult.kt
